--- a/trunk/SigmaUtil/SigmaUtil_express2008.vcxproj.filters
+++ b/trunk/SigmaUtil/SigmaUtil_express2008.vcxproj.filters
@@ -661,13 +661,17 @@
     <ClCompile Include="SulParticleCounterOnce.cpp">
       <Filter>Particles</Filter>
     </ClCompile>
-    <ClCompile Include="SulParticleSystemCleanUpUpdater.cpp" />
-    <ClCompile Include="SulParticleSystemLoadInstancer.cpp" />
     <ClCompile Include="SulTrackballManipulatorDebugger.cpp">
       <Filter>CameraManipulator</Filter>
     </ClCompile>
     <ClCompile Include="SulProjectionScreenAlignedText.cpp">
       <Filter>Objects\Text</Filter>
+    </ClCompile>
+    <ClCompile Include="SulParticleSystemCleanUpUpdater.cpp">
+      <Filter>Particles</Filter>
+    </ClCompile>
+    <ClCompile Include="SulParticleSystemLoadInstancer.cpp">
+      <Filter>Particles</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1455,14 +1459,20 @@
       <Filter>Particles</Filter>
     </ClInclude>
     <ClInclude Include="SulEntity.h" />
-    <ClInclude Include="SulParticleSystemCleanUpUpdater.h" />
-    <ClInclude Include="SulParticleSystemInterpolatorQuadratic.h" />
-    <ClInclude Include="SulParticleSystemLoadInstancer.h" />
     <ClInclude Include="SulTrackballManipulatorDebugger.h">
       <Filter>CameraManipulator</Filter>
     </ClInclude>
     <ClInclude Include="SulProjectionScreenAlignedText.h">
       <Filter>Objects\Text</Filter>
+    </ClInclude>
+    <ClInclude Include="SulParticleSystemLoadInstancer.h">
+      <Filter>Particles</Filter>
+    </ClInclude>
+    <ClInclude Include="SulParticleSystemCleanUpUpdater.h">
+      <Filter>Particles</Filter>
+    </ClInclude>
+    <ClInclude Include="SulParticleSystemInterpolatorQuadratic.h">
+      <Filter>Particles</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
