--- a/trunk/osghelp/Grid/Grid.vcxproj
+++ b/trunk/osghelp/Grid/Grid.vcxproj
@@ -77,7 +77,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>osgDB.lib;osg.lib;osgGA.lib;osgViewer.lib;osgManipulator.lib;SigmaUtil_x2008.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>OpenThreads.lib;ws2_32.lib;osgDB.lib;osg.lib;osgGA.lib;osgViewer.lib;osgManipulator.lib;SigmaUtil_x2008.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OSG_LIB_PATH);$(SIGMAOSG_ROOT_PATH)\libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
